=added rpc commands management

--- a/plant-identification/src/modules/plantIdentification/CMakeLists.txt
+++ b/plant-identification/src/modules/plantIdentification/CMakeLists.txt
@@ -9,7 +9,6 @@ set(MODULENAME plantIdentification)
 
 # Search for source code.
 set(INC_HEADERS
-    idl/include/plantIdentification_IDLServer.h
     include/iCub/plantIdentification/PlantIdentificationModule.h
     include/iCub/plantIdentification/PlantIdentificationEnums.h
 
@@ -22,15 +21,15 @@ set(INC_HEADERS
 
     include/iCub/plantIdentification/data/LogData.h
     include/iCub/plantIdentification/data/TaskData.h
+    include/iCub/plantIdentification/data/RPCCommandsData.h
 
     include/iCub/plantIdentification/util/ControllersUtil.h
     include/iCub/plantIdentification/util/PortsUtil.h
+    include/iCub/plantIdentification/util/RPCCommandsUtil.h
 
 )
 
 set(INC_SOURCES
-
-    idl/src/plantIdentification_IDLServer.cpp
 
     main.cpp
 
@@ -45,26 +44,21 @@ set(INC_SOURCES
 
     data/LogData.cpp
     data/TaskData.cpp
+    data/RPCCommandsData.cpp
 
     util/ControllersUtil.cpp
     util/PortsUtil.cpp
+    util/RPCCommandsUtil.cpp
 )
-
-# Search for thrift files
-set(IDL ${MODULENAME}.thrift)
-yarp_idl_to_dir(${IDL} ${CMAKE_CURRENT_SOURCE_DIR}/idl)
-
 
 source_group("Source Files" FILES ${INC_SOURCES})
 source_group("Header Files" FILES ${INC_HEADERS})
-source_group("IDL Files"    FILES ${IDL})
 
 # Include directories
 include_Directories(${skinDynLib_INCLUDE_DIRS})
 include_directories(include)
-include_directories(idl/include)
 
-add_executable(${MODULENAME} ${INC_SOURCES} ${INC_HEADERS} ${IDL})
+add_executable(${MODULENAME} ${INC_SOURCES} ${INC_HEADERS})
 target_link_libraries(${MODULENAME} ${YARP_LIBRARIES} skinDynLib icubmod)
 
 if(WIN32)
