=improvements on pid management, tactile data processing and resource file parameters

--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -1,10 +1,11 @@
-# Generic module parameters
+### Generic module parameters
+
 name tactileGrasp
 period 1.0
 robotName icub
 whichHand right
 
-# Fingers are:   thumb (4)  index (0)   middle (1)   right+pinky (2,3)
+# Fingers are:   thumb (4)  index (0)   middle (1)   right (2)   pinky (3)
 fingerToMove 1
 
 # Finger joints are:   thumb (8,9,10)   index (11,12)   middle (13,14)   right+pinky (15) 
@@ -13,24 +14,44 @@ jointToMove 13
 # +1 / -1
 pwmSign +1
 
-# Control mode:   forward (0)   backward (1)   both forward and backward (2)
+#median width
+medianWidth 20
+
+screenLogStride 10
+
+### Control task parameters
+
+# Control mode:   gains set for error >= 0 (0)   gains set for error < 0 (1)   both gains sets (2)
 controlMode 2
 
-# Control task parameters: PID gains
-#forward control
-pidKpf 6.85
-pidKif 28.6
-pidKdf 0.0
-#backward control
-pidKpb 1.59
-pidKib 1.14
-pidKdb 0.0
+## PID parameters
 
-# Ramp task parameters
+#gains set for error >= 0
+pidKpPe 6.85
+pidKiPe 28.6
+pidKdPe 0.0
+#gains set for error < 0
+pidKpNe 1.59
+pidKiNe 1.14
+pidKdNe 0.0
+
+pidWp 1.0
+pidWi 1.0
+pidWd 1.0
+pidN 10
+pidWindUpCoeff 0.5
+pidMinSatLim -1333.0
+pidMaxSatLim 1333.0
+
+
+### Ramp task parameters
+
 slope -0.0025
 intercept -90.0
 
-# Tasks lifespan
+
+### Tasks lifespan
+
 stepTaskLifespan 10
 controlTaskLifespan 15
 drawBakTaskLifespan 15
