--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -39,6 +39,7 @@ pidWp 1.0
 pidWi 1.0
 pidWd 1.0
 pidN 10
+# x times Ti (should be between 0.1 and 1.0)
 pidWindUpCoeff 0.5
 pidMinSatLim -1333.0
 pidMaxSatLim 1333.0
