=pid reset added, minor bug fixes and improvements

--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -24,6 +24,7 @@ screenLogStride 10
 # Control mode:   gains set for error >= 0 (0)   gains set for error < 0 (1)   both gains sets (2)
 controlMode 2
 
+
 ## PID parameters
 
 #gains set for error >= 0
@@ -43,7 +44,8 @@ pidN 10
 pidWindUpCoeff 0.5
 pidMinSatLim -1333.0
 pidMaxSatLim 1333.0
-
+# 0: false; 1: true;
+pidResetEnabled 0
 
 ### Ramp task parameters
 
