--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -1,15 +1,12 @@
 ### Generic module parameters
 
+# Fingers are:   thumb (4)  index (0)   middle (1)   right (2)   pinky (3)
+# Finger joints are:   thumb (8,9,10)   index (11,12)   middle (13,14)   right+pinky (15) 
+
 name tactileGrasp
 period 1.0
 robotName icub
 whichHand right
-
-# Fingers are:   thumb (4)  index (0)   middle (1)   right (2)   pinky (3)
-fingerToMove 1
-
-# Finger joints are:   thumb (8,9,10)   index (11,12)   middle (13,14)   right+pinky (15) 
-jointToMove 13
 
 # +1 / -1
 pwmSign +1
@@ -19,7 +16,17 @@ medianWidth 20
 
 screenLogStride 10
 
+
+### Step task parameters
+
+# Joints
+stepTaskJoints (11)
+
+
 ### Control task parameters
+
+# Joints
+controlTaskJoints (9 11 13)
 
 # Control mode:   gains set for error >= 0 (0)   gains set for error < 0 (1)   both gains sets (2)
 controlMode 2
@@ -48,6 +55,9 @@ pidMaxSatLim 1333.0
 pidResetEnabled 0
 
 ### Ramp task parameters
+
+# Joints
+rampTaskJoints (11)
 
 slope -0.0025
 intercept -90.0
