=added possibility to use different gains set at the same time

--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -35,13 +35,11 @@ controlMode 2
 ## PID parameters
 
 #gains set for error >= 0
-pidKpPe 6.85
-pidKiPe 28.6
-pidKdPe 0.0
+pidKpPe (6.85 6.85)
+pidKiPe (28.6 28.6)
 #gains set for error < 0
-pidKpNe 1.59
-pidKiNe 1.14
-pidKdNe 0.0
+pidKpNe (1.59 1.59)
+pidKiNe (1.14 1.14)
 
 pidWp 1.0
 pidWi 1.0
