=added fingers-object approach using high level PI controller

--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -1,6 +1,5 @@
 ### Generic module parameters
 
-# Fingers are:   thumb (4)  index (0)   middle (1)   right (2)   pinky (3)
 # Finger joints are:   thumb (8,9,10)   index (11,12)   middle (13,14)   right+pinky (15) 
 
 name tactileGrasp
@@ -15,6 +14,9 @@ pwmSign +1
 medianWidth 20
 
 screenLogStride 10
+
+# Fingers are:   index (0)   middle (1)   right (2)   pinky (3)   thumb (4) 
+objDetectPressureThresholds (10 10 10 10 10)
 
 
 ### Step task parameters
