=added fingers-object approach using velocity control mode

--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -25,6 +25,18 @@ objDetectPressureThresholds (10 10 10 10 10)
 stepTaskJoints (11)
 
 
+### Approach task parameters
+
+# Joints
+approach.taskJoints (9 11 13)
+
+# Velocities
+approach.jointsVelocities (10 10 10)
+
+# PWM limit
+approach.jointsPwmLimits (300 300 300)
+approach.jointsPwmLimitsEnabled 0
+
 ### Control task parameters
 
 # Joints
@@ -69,5 +81,6 @@ stepTaskLifespan 10
 controlTaskLifespan 15
 drawBakTaskLifespan 15
 drawBackTaskLifespanAfterStabilization 5
+approach.lifespan 5
 
 
