=added force control supervisor

--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -15,6 +15,9 @@ medianWidth 20
 
 screenLogStride 10
 
+#temporary parameters
+tempParameters (0)
+
 # Fingers are:   index (0)   middle (1)   right (2)   pinky (3)   thumb (4) 
 objDetectPressureThresholds (10 10 10 10 10)
 
