--- a/plant-identification/src/modules/plantIdentification/CMakeLists.txt
+++ b/plant-identification/src/modules/plantIdentification/CMakeLists.txt
@@ -60,11 +60,11 @@ source_group("Source Files" FILES ${INC_SOURCES})
 source_group("Header Files" FILES ${INC_HEADERS})
 
 # Include directories
-include_Directories(${skinDynLib_INCLUDE_DIRS})
+include_Directories(${ctrlLib_INCLUDE_DIRS} ${skinDynLib_INCLUDE_DIRS})
 include_directories(include ${iKin_INCLUDE_DIRS})
 
 add_executable(${MODULENAME} ${INC_SOURCES} ${INC_HEADERS})
-target_link_libraries(${MODULENAME} ${YARP_LIBRARIES} skinDynLib icubmod iKin)
+target_link_libraries(${MODULENAME} ${YARP_LIBRARIES} ctrlLib skinDynLib icubmod iKin)
 
 if(WIN32)
     install(TARGETS ${PROJECT_NAME} DESTINATION bin/${CMAKE_BUILD_TYPE})
