approach task modified

--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -36,6 +36,9 @@ approach.taskJoints (9 11 13)
 # Velocities
 approach.jointsVelocities (10 10 10)
 
+# Pwm
+approach.jointsPwm (350 170 170)
+
 # PWM limit
 approach.jointsPwmLimits (300 300 300)
 approach.jointsPwmLimitsEnabled 0
