--- a/object-grasping-demo/app/contexts/objectGrasping/confObjectGrasping.ini
+++ b/object-grasping-demo/app/contexts/objectGrasping/confObjectGrasping.ini
@@ -1,12 +1,11 @@
 name objectGrasping
 period 1
 robot icub
-whichHand right
+whichHand left
 
 targetPressure 40
 
 pidKp 6.85
 pidKi 28.6
 pidKd 0.0
-
 
