--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -5,7 +5,7 @@
 name tactileGrasp
 period 1.0
 robotName icub
-whichHand right
+whichHand left
 
 # +1 / -1
 pwmSign +1
@@ -13,19 +13,22 @@ pwmSign +1
 #median width
 medianWidth 20
 
-screenLogStride 10
+screenLogStride 5
+(18: 1) (19: 0) (20: 4) (21: -6.0) (22: 2) (23: 0) (24: 4) (25: 105) (26: 0) (27: 17.0) (28: 40.0) 
 
 #temporary parameters
-tempParameters (0)
+#               #0 #1  #2  #3  #4 #5  #6 #7   #8  #9  #10 #11 #12  #13 #14 #15 #16 #17 #18 #19  #20 #21  #22 #23  #24 #25   #26 #27  #28   #29 #30 #31 #32 #33 #34 #35 #36 #37 #38 #39 #40
+tempParameters (1  80  2.0 1.6 0  1.0 0  80.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   0.0  4.0 20.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   2.0 2.0 25  1.5 0.5 1   1)
+
 
 # Fingers are:   index (0)   middle (1)   right (2)   pinky (3)   thumb (4) 
-objDetectPressureThresholds (10 10 10 10 10)
+objDetectPressureThresholds (40 40 40 40 40)
 
 
 ### Step task parameters
 
 # Joints
-stepTaskJoints (11)
+stepTaskJoints (9 11 13)
 
 
 ### Approach task parameters
@@ -34,14 +37,15 @@ stepTaskJoints (11)
 approach.taskJoints (9 11 13)
 
 # Velocities
-approach.jointsVelocities (10 10 10)
+approach.jointsVelocities (20 20 20)
 
 # Pwm
-approach.jointsPwm (350 170 170)
+approach.jointsPwm (800 200 200)
 
 # PWM limit
-approach.jointsPwmLimits (300 300 300)
+approach.jointsPwmLimits (800 200 200)
 approach.jointsPwmLimitsEnabled 0
+
 
 ### Control task parameters
 
@@ -49,17 +53,17 @@ approach.jointsPwmLimitsEnabled 0
 controlTaskJoints (9 11 13)
 
 # Control mode:   gains set for error >= 0 (0)   gains set for error < 0 (1)   both gains sets (2)
-controlMode 2
+controlMode 0
 
 
 ## PID parameters
 
 #gains set for error >= 0
-pidKpPe (6.85 6.85)
-pidKiPe (28.6 28.6)
+pidKpPe (7.54 7.54 7.54)
+pidKiPe (16.5 16.5 16.5)
 #gains set for error < 0
-pidKpNe (1.59 1.59)
-pidKiNe (1.14 1.14)
+pidKpNe (38 38 38)
+pidKiNe (31.6 31.6 31.6)
 
 pidWp 1.0
 pidWi 1.0
@@ -75,18 +79,17 @@ pidResetEnabled 0
 ### Ramp task parameters
 
 # Joints
-rampTaskJoints (11)
+rampTaskJoints (9 11 13)
 
-slope -0.0025
-intercept -90.0
+slope -0.0001
+intercept -70.0
 
 
 ### Tasks lifespan
 
-stepTaskLifespan 10
+stepTaskLifespan 6
 controlTaskLifespan 15
 drawBakTaskLifespan 15
 drawBackTaskLifespanAfterStabilization 5
-approach.lifespan 5
-
+approach.lifespan 10
 
