--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -6,6 +6,7 @@ name tactileGrasp
 period 1.0
 robotName icub
 whichHand left
+headEnabled 0
 
 # +1 / -1
 pwmSign +1
@@ -14,11 +15,11 @@ pwmSign +1
 medianWidth 20
 
 screenLogStride 5
-(18: 1) (19: 0) (20: 4) (21: -6.0) (22: 2) (23: 0) (24: 4) (25: 105) (26: 0) (27: 17.0) (28: 40.0) 
+#(18: 1) (19: 0) (20: 4) (21: -6.0) (22: 2) (23: 0) (24: 4) (25: 105) (26: 0) (27: 17.0) (28: 40.0) 
 
 #temporary parameters
-#               #0 #1  #2  #3  #4 #5  #6 #7   #8  #9  #10 #11 #12  #13 #14 #15 #16 #17 #18 #19  #20 #21  #22 #23  #24 #25   #26 #27  #28   #29 #30 #31 #32 #33 #34 #35 #36 #37 #38 #39 #40
-tempParameters (1  80  2.0 1.6 0  1.0 0  80.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   0.0  4.0 20.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   2.0 2.0 25  1.5 0.5 1   1)
+#               #0 #1  #2  #3  #4 #5  #6 #7   #8  #9  #10 #11 #12  #13 #14 #15 #16 #17 #18 #19  #20 #21  #22 #23  #24 #25   #26 #27  #28   #29 #30 #31 #32 #33 #34 #35 #36 #37 #38 #39 #40 #41 #42  #43
+tempParameters (1  80  2.0 1.6 0  1.0 0  80.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   0.0  4.0 20.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   2.0 2.0 25  1.5 0.5 1   1   0.2 40.0 2.0)
 
 
 # Fingers are:   index (0)   middle (1)   right (2)   pinky (3)   thumb (4) 
