--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification.ini
@@ -3,7 +3,9 @@
 # Finger joints are:   thumb (8,9,10)   index (11,12)   middle (13,14)   right+pinky (15) 
 
 name tactileGrasp
-period 1.0
+moduleThreadPeriod 1000
+taskThreadPeriod 20
+eventsThreadPeriod 15
 robotName icub
 whichHand left
 headEnabled 0
