--- a/plant-identification/src/modules/plantIdentification/CMakeLists.txt
+++ b/plant-identification/src/modules/plantIdentification/CMakeLists.txt
@@ -13,7 +13,8 @@ set(INC_HEADERS
     include/iCub/plantIdentification/PlantIdentificationEnums.h
 
     include/iCub/plantIdentification/thread/TaskThread.h
-
+    include/iCub/plantIdentification/thread/EventsThread.h
+	
     include/iCub/plantIdentification/task/Task.h
     include/iCub/plantIdentification/task/StepTask.h
     include/iCub/plantIdentification/task/ControlTask.h
@@ -28,7 +29,6 @@ set(INC_HEADERS
     include/iCub/plantIdentification/util/PortsUtil.h
     include/iCub/plantIdentification/util/RPCCommandsUtil.h
     include/iCub/plantIdentification/util/ICubUtil.h
-    include/iCub/plantIdentification/util/EventsUtil.h
 
 )
 
@@ -39,6 +39,7 @@ set(INC_SOURCES
     PlantIdentificationModule.cpp
 
     thread/TaskThread.cpp
+    thread/EventsThread.cpp
 
     task/Task.cpp
     task/StepTask.cpp
@@ -54,7 +55,6 @@ set(INC_SOURCES
     util/PortsUtil.cpp
     util/RPCCommandsUtil.cpp
     util/ICubUtil.cpp
-    util/EventsUtil.cpp
 
 )
 
