--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification2Fingers.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification2Fingers.ini
@@ -21,7 +21,7 @@ screenLogStride 5
 
 #temporary parameters
 #               #0 #1  #2  #3  #4 #5  #6 #7   #8  #9  #10 #11 #12  #13 #14 #15 #16 #17 #18 #19  #20 #21 #22 #23  #24 #25   #26 #27  #28   #29 #30 #31 #32 #33 #34 #35 #36 #37 #38 #39 #40 #41 #42  #43 #44
-tempParameters (1  80  2.0 1.6 0  1.0 0  70.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   10.0 2.0 5.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   2.0 2.0 25  1.5 0.5 1   1   0.2 40.0 2.0 1)
+tempParameters (1  40  1.0 0.8 0  1.0 0  70.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   10.0 2.0 5.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   2.0 2.0 25  1.5 0.5 1   1   0.2 40.0 2.0 1)
 
 
 # Fingers are:   index (0)   middle (1)   right (2)   pinky (3)   thumb (4) 
@@ -31,29 +31,29 @@ objDetectPressureThresholds (40 40 40 40 40)
 ### Step task parameters
 
 # Joints
-stepTaskJoints (9 11 13)
+stepTaskJoints (9 13)
 
 
 ### Approach task parameters
 
 # Joints
-approach.taskJoints (9 11 13)
+approach.taskJoints (9 13)
 
 # Velocities
-approach.jointsVelocities (20 20 20)
+approach.jointsVelocities (20 20)
 
 # Pwm
-approach.jointsPwm (800 200 200)
+approach.jointsPwm (800 300)
 
 # PWM limit
-approach.jointsPwmLimits (800 200 200)
+approach.jointsPwmLimits (800 300)
 approach.jointsPwmLimitsEnabled 0
 
 
 ### Control task parameters
 
 # Joints
-controlTaskJoints (9 11 13)
+controlTaskJoints (9 13)
 
 # Control mode:   gains set for error >= 0 (0)   gains set for error < 0 (1)   both gains sets (2)
 controlMode 0
@@ -62,11 +62,11 @@ controlMode 0
 ## PID parameters
 
 #gains set for error >= 0
-pidKpPe (7.54 7.54 7.54)
-pidKiPe (16.5 16.5 16.5)
+pidKpPe (7.54 7.54)
+pidKiPe (16.5 16.5)
 #gains set for error < 0
-pidKpNe (38 38 38)
-pidKiNe (31.6 31.6 31.6)
+pidKpNe (38 38)
+pidKiNe (31.6 31.6)
 
 pidWp 1.0
 pidWi 1.0
@@ -82,7 +82,7 @@ pidResetEnabled 0
 ### Ramp task parameters
 
 # Joints
-rampTaskJoints (9 11 13)
+rampTaskJoints (9 13)
 
 slope -0.0001
 intercept -70.0
