--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification3Fingers.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification3Fingers.ini
@@ -43,10 +43,12 @@ approach.taskJoints (9 11 13)
 approach.jointsVelocities (20 20 20)
 
 # Pwm
-approach.jointsPwm (800 200 200)
+#approach.jointsPwm (800 200 200) #purple
+approach.jointsPwm (450 350 350) #black
 
 # PWM limit
-approach.jointsPwmLimits (800 200 200)
+#approach.jointsPwmLimits (800 200 200) #purple
+approach.jointsPwmLimits (450 350 350) #black
 approach.jointsPwmLimitsEnabled 0
 
 
