--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification2Fingers.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification2Fingers.ini
@@ -43,10 +43,10 @@ approach.taskJoints (9 13)
 approach.jointsVelocities (20 20)
 
 # Pwm
-approach.jointsPwm (800 300)
+approach.jointsPwm (800 300) #purple
 
 # PWM limit
-approach.jointsPwmLimits (800 300)
+approach.jointsPwmLimits (800 300) #purple
 approach.jointsPwmLimitsEnabled 0
 
 
