--- a/plant-identification/app/contexts/plantIdentification/confFCObjectExploration.ini
+++ b/plant-identification/app/contexts/plantIdentification/confFCObjectExploration.ini
@@ -8,6 +8,8 @@ taskThreadPeriod 20
 eventsThreadPeriod 15
 robotName icub
 whichHand left
+whichICub black
+whichTask grasp
 headEnabled 0
 
 # +1 / -1
