--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification1Finger.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification1Finger.ini
@@ -8,6 +8,8 @@ taskThreadPeriod 20
 eventsThreadPeriod 15
 robotName icub
 whichHand left
+whichICub black
+whichTask objrec
 headEnabled 0
 
 # +1 / -1
@@ -21,7 +23,7 @@ screenLogStride 5
 
 #temporary parameters
 #               #0 #1  #2  #3  #4 #5  #6 #7   #8  #9  #10 #11 #12  #13 #14 #15 #16 #17 #18 #19  #20 #21 #22 #23  #24 #25   #26 #27  #28   #29 #30 #31 #32 #33 #34 #35 #36 #37 #38 #39 #40 #41 #42  #43 #44 #45 #46 #47 #48
-tempParameters (1  80  2.0 1.6 0  1.0 0  70.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   10.0 2.0 5.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   1   3   2.0 2.0 25  1.5 1.5 1   1   0.2 40.0 2.0 1   1   0   0   0)
+tempParameters (0  80  2.0 1.6 0  1.0 0  70.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   10.0 2.0 5.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   2.0 2.0 25  1.5 1.5 1   1   0.2 40.0 2.0 1   1   0   0   0)
 
 
 # Fingers are:   index (0)   middle (1)   right (2)   pinky (3)   thumb (4) 
