--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification1Finger.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification1Finger.ini
@@ -2,7 +2,7 @@
 
 # Finger joints are:   thumb (8,9,10)   index (11,12)   middle (13,14)   right+pinky (15) 
 
-name tactileGrasp
+name stableGrasp
 moduleThreadPeriod 1000
 taskThreadPeriod 20
 eventsThreadPeriod 15
