--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification2FingersDarmstadt.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification2FingersDarmstadt.ini
@@ -23,8 +23,8 @@ medianWidth 50
 screenLogStride 5
 
 #temporary parameters
-#               #0 #1  #2  #3  #4 #5  #6 #7   #8  #9  #10 #11 #12  #13 #14 #15 #16 #17 #18 #19  #20 #21 #22 #23  #24 #25   #26 #27  #28   #29 #30 #31 #32 #33 #34 #35 #36 #37 #38 #39 #40 #41 #42  #43 #44 #45 #46 #47 #48 #49 #50 #51 #52 #53 #54 #55 #56 #57 #58 #59 #60 #61 #62 #63 #64 #65 #66 #67 #68 #69 #70 #71 #72 #73 #74 #75 #76 #77 #78 #79 #80 #81 #82 #83 #84 #85 #86 #87 #88   #89   #90    #91 #92 #93    #94 #95 #96 #97 #98 #99 #100 #101 #102 #103 #104 #105
-tempParameters (1  30  1.0 1.6 0  1.0 0  40.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   0.0  4.0 0.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   2.0 2.0 25  1.5 0.7 1   0   0.2 40.0 2.0 1   1   0   0   0   0   0   0   1.0 1.0 1.0 0   0   0   0   0   0   3   2   5   2   0   0   0   0   0   0   0.3 0   0   250 0   0   0   0   0   0   0   0   0   4.0 1.0 4.0 3.0 120.0 180.0 -350.0 0   4.0 -400.0 0   0   0   0   0   0   0    0    0    0    0    0)
+#               #0 #1  #2  #3  #4 #5  #6 #7   #8  #9  #10 #11 #12  #13 #14 #15 #16 #17 #18 #19 #20 #21  #22 #23  #24 #25   #26 #27  #28   #29 #30 #31 #32 #33 #34 #35 #36 #37 #38 #39 #40 #41 #42  #43 #44 #45 #46 #47 #48 #49 #50 #51 #52 #53 #54 #55 #56 #57 #58 #59 #60 #61 #62 #63 #64 #65 #66 #67 #68 #69 #70 #71 #72 #73 #74 #75 #76 #77 #78 #79 #80 #81 #82 #83 #84 #85 #86 #87 #88  #89   #90    #91 #92 #93    #94 #95 #96 #97 #98 #99 #100 #101 #102 #103 #104 #105
+tempParameters (1  30  1.0 1.6 0  1.0 0  50.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   0.0 4.0 10.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   1.5 2.0 25  1.5 0.7 1   0   0.2 40.0 2.0 1   1   0   0   0   0   0   0   1.0 1.0 1.0 0   0   0   0   0   0   3   2   5   2   0   0   0   0   0   0   0.3 0   0   250 0   0   0   0   0   0   0   0   0   4.0 1.0 4.0 3.0 90.0 170.0 -250.0 0   4.0 -250.0 0   0   0   0   0   0   0    0    0    0    0    0)
 
 
 # Fingers are:   index (0)   middle (1)   right (2)   pinky (3)   thumb (4) 
@@ -49,8 +49,10 @@ approach.jointsVelocities (20 20)
 approach.jointsPwm (800 300) #purple
 
 # PWM limit
-approach.jointsPwmLimits (800 300) #purple
-approach.jointsPwmLimitsEnabled 0
+#approach.jointsPwmLimits (800 200) #purple
+#approach.jointsPwmLimits (450 350) #black
+approach.jointsPwmLimits (210 190) #darmstadt
+approach.jointsPwmLimitsEnabled 1
 
 
 ### Control task parameters
