--- a/plant-identification/app/contexts/plantIdentification/confPlantIdentification2FingersPolicyLearning.ini
+++ b/plant-identification/app/contexts/plantIdentification/confPlantIdentification2FingersPolicyLearning.ini
@@ -13,6 +13,9 @@ whichTask grasp
 numFingers 2
 headEnabled 0
 xyzCoordEnabled 0
+#			        J0  J1 J2 J3 J4  J5 J6
+armJoints_grasp  = [-35 29 21 60 -20 2  3]
+armJoints_objrec = [-35 29 21 33 -20 2  -20]
 
 # +1 / -1
 pwmSign +1
