--- a/plant-identification/app/contexts/plantIdentification/confObjectRecognition.ini
+++ b/plant-identification/app/contexts/plantIdentification/confObjectRecognition.ini
@@ -8,14 +8,15 @@ taskThreadPeriod 20
 eventsThreadPeriod 15
 robotName icub
 whichHand left
-whichICub black
-whichTask grasp
+whichICub darmstadt
+whichTask objrec
 numFingers 2
 headEnabled 0
 xyzCoordEnabled 0
-#			        J0  J1 J2 J3 J4  J5 J6
-armJoints_grasp  = [-35 29 21 60 -20 2  3]
-armJoints_objrec = [-35 29 21 33 -20 2  -20]
+#		    J0  J1 J2 J3 J4  J5 J6
+armJoints_grasp  = (-35 29 21 60 -20 2  3)
+armJoints_objrec  = (-35 29 21 60 -20 2  3)
+
 
 # +1 / -1
 pwmSign +1
@@ -27,8 +28,13 @@ screenLogStride 5
 
 #temporary parameters
 #               #0 #1  #2  #3  #4 #5  #6 #7   #8  #9  #10 #11 #12  #13 #14 #15 #16 #17 #18 #19 #20 #21  #22 #23  #24 #25   #26 #27  #28   #29 #30 #31 #32 #33 #34 #35 #36 #37 #38 #39 #40 #41 #42  #43 #44 #45 #46 #47 #48 #49 #50 #51 #52 #53 #54 #55 #56 #57 #58 #59 #60 #61 #62 #63 #64 #65 #66 #67 #68 #69 #70 #71 #72 #73 #74 #75 #76 #77 #78 #79 #80 #81 #82 #83 #84 #85 #86 #87 #88  #89   #90    #91 #92 #93    #94 #95 #96 #97 #98 #99 #100 #101 #102 #103 #104 #105
-tempParameters (1  30  1.0 1.6 0  1.0 0  50.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   0.0 4.0 10.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   1.5 2.0 25  1.5 0.7 1   0   0.2 40.0 2.0 1   1   0   0   0   0   0   0   1.0 1.0 1.0 0   0   0   0   0   0   3   2   5   2   0   0   0   0   0   0   0.3 0   0   250 0   0   0   0   0   0   0   0   0   4.0 1.0 4.0 3.0 90.0 170.0 -250.0 0   4.0 -250.0 0   0   0   0   0   0   0    0    0    0    0    0)
+tempParameters (1  30  1.0 1.6 0  1.0 0  50.0 0.0 0.0 0.0 0   20.0 3.0 0   0   "#" "#" 0   5.0 4.0 10.0 0   20.0  4.0 100.0 0   30.0 30.0 1   2   0   0   3   1.5 2.0 25  1.5 0.7 1   1   0.2 40.0 2.0 1   1   0   0   0   0   0   0   1.0 1.0 1.0 0   0   0   0   0   0   3   2   5   2   0   0   0   0   0   0   0.3 0   0   250 0   0   0   0   0   0   0   0   0   4.0 1.0 4.0 3.0 90.0 230.0 -250.0 0   4.0 -250.0 0   0   5.0   0   0   0   0    0    0    0    0    0)
 
+#objectrecognition data (84-95)
+#LEFT hand
+# 4.0 1.0 4.0 3.0 90.0 230.0 -250.0 0   4.0 -250.0 0   0
+#RIGHT hand
+# 4.0 1.0 4.0 3.0 90.0 140.0 300.0 0   4.0 -300.0 0   0
 
 # Fingers are:   index (0)   middle (1)   right (2)   pinky (3)   thumb (4) 
 objDetectPressureThresholds (40 40 40 40 40)
