implemented object recognition using gurls

--- a/plant-identification/src/modules/plantIdentification/CMakeLists.txt
+++ b/plant-identification/src/modules/plantIdentification/CMakeLists.txt
@@ -30,6 +30,7 @@ set(INC_HEADERS
     include/iCub/plantIdentification/util/PortsUtil.h
     include/iCub/plantIdentification/util/RPCCommandsUtil.h
     include/iCub/plantIdentification/util/ICubUtil.h
+    include/iCub/plantIdentification/util/MLUtil.h
 
     include/iCub/plantIdentification/action/WaveAction.h
 
@@ -59,6 +60,7 @@ set(INC_SOURCES
     util/PortsUtil.cpp
     util/RPCCommandsUtil.cpp
     util/ICubUtil.cpp
+    util/MLUtil.cpp
 
     action/WaveAction.cpp
 
