added several minor functionalities

--- a/plant-identification/app/contexts/plantIdentification/confHandover.ini
+++ b/plant-identification/app/contexts/plantIdentification/confHandover.ini
@@ -17,6 +17,7 @@ specifyHand     1
 #		    J0  J1 J2 J3 J4  J5 J6
 armJoints_grasp  = (-35 29 21 60 -20 2  3)
 armJoints_objrec = (-35 29 21 33 -20 2  -200)
+refVelocity = 100
 
 # +1 / -1
 pwmSign +1
