added several minor functionalities

--- a/plant-identification/app/contexts/plantIdentification/iCub_darmstadt.ini
+++ b/plant-identification/app/contexts/plantIdentification/iCub_darmstadt.ini
@@ -50,3 +50,7 @@ hysteresis_right = (0   0.0 0.0 0.0 0.0 0)
 #					 #7
 gripStrength_left =  70.0
 gripStrength_right = 70.0
+
+#                  #84 #85 #86 #87 #88   #89   #90    #91 #92 #93    #94 #95
+objRecPar_left =  (4.0 1.0 4.0 3.0 100.0 250.0 -290.0 0   4.0 -250.0 0   1)
+objRecPar_right = (4.0 1.0 4.0 3.0 100.0 140.0 350.0  0   4.0 -300.0 0   1)
