--- a/plant-identification/app/contexts/plantIdentification/confCommon.ini
+++ b/plant-identification/app/contexts/plantIdentification/confCommon.ini
@@ -1,4 +1,4 @@
 wholeArmJoints_down  = (-20 22 16 16 0 8 23 1 68 4 4 4 4 4 4 4)
 
 # object recognition
-dataDefaultSuffix = S2-NN-30
+dataDefaultSuffix = S2-YN-35
