--- a/plant-identification/app/contexts/plantIdentification/confHandover.ini
+++ b/plant-identification/app/contexts/plantIdentification/confHandover.ini
@@ -8,7 +8,7 @@ taskThreadPeriod 20
 eventsThreadPeriod 15
 robotName icub
 whichHand left
-whichICub darmstadt
+whichICub black
 whichTask grasp
 numFingers 3
 headEnabled 0
