--- a/plant-identification/app/contexts/plantIdentification/confObjectRecognition.ini
+++ b/plant-identification/app/contexts/plantIdentification/confObjectRecognition.ini
@@ -8,7 +8,7 @@ taskThreadPeriod 20
 eventsThreadPeriod 15
 robotName icub
 whichHand left
-whichICub darmstadt
+whichICub black
 whichTask objrec
 numFingers 2
 headEnabled 0
@@ -59,8 +59,8 @@ approach.jointsPwm (800 300) #purple
 
 # PWM limit
 #approach.jointsPwmLimits (800 200) #purple
-#approach.jointsPwmLimits (450 350) #black
-approach.jointsPwmLimits (210 190) #darmstadt
+approach.jointsPwmLimits (450 350) #black
+#approach.jointsPwmLimits (210 190) #darmstadt
 approach.jointsPwmLimitsEnabled 1
 
 
