--- a/plant-identification/app/contexts/plantIdentification/confObjectRecognition.ini
+++ b/plant-identification/app/contexts/plantIdentification/confObjectRecognition.ini
@@ -7,8 +7,8 @@ moduleThreadPeriod 1000
 taskThreadPeriod 20
 eventsThreadPeriod 15
 robotName icub
-whichHand left
-whichICub black
+whichHand right
+whichICub purple
 whichTask objrec
 numFingers 2
 headEnabled 0
@@ -55,11 +55,11 @@ approach.taskJoints (9 13)
 approach.jointsVelocities (20 20)
 
 # Pwm
-approach.jointsPwm (800 300) #purple
+approach.jointsPwm (180 230) #purple
 
 # PWM limit
-#approach.jointsPwmLimits (800 200) #purple
-approach.jointsPwmLimits (450 350) #black
+approach.jointsPwmLimits (180 230) #purple
+#approach.jointsPwmLimits (450 350) #black
 #approach.jointsPwmLimits (210 190) #darmstadt
 approach.jointsPwmLimitsEnabled 1
 
