--- a/plant-identification/app/contexts/plantIdentification/confObjectRecognition.ini
+++ b/plant-identification/app/contexts/plantIdentification/confObjectRecognition.ini
@@ -8,7 +8,7 @@ taskThreadPeriod 20
 eventsThreadPeriod 15
 robotName icub
 whichHand right
-whichICub purple
+whichICub black
 whichTask objrec
 numFingers 2
 headEnabled 0
@@ -55,11 +55,14 @@ approach.taskJoints (9 13)
 approach.jointsVelocities (20 20)
 
 # Pwm
-approach.jointsPwm (180 230) #purple
+#approach.jointsPwm (180 230) #purple right
+#approach.jointsPwm (450 350) #black left
+approach.jointsPwm (140 320) #black right
 
 # PWM limit
-approach.jointsPwmLimits (180 230) #purple
-#approach.jointsPwmLimits (450 350) #black
+#approach.jointsPwmLimits (180 230) #purple
+#approach.jointsPwmLimits (450 350) #black left
+approach.jointsPwmLimits (160 350) #black right
 #approach.jointsPwmLimits (210 190) #darmstadt
 approach.jointsPwmLimitsEnabled 1
 
@@ -76,8 +79,10 @@ controlMode 0
 ## PID parameters
 
 #gains set for error >= 0
-pidKpPe (7.54 7.54)
-pidKiPe (16.5 16.5)
+#pidKpPe (7.54 7.54)
+#pidKiPe (16.5 16.5)
+pidKpPe (4.8 4.8)
+pidKiPe (10.6 10.6)
 #gains set for error < 0
 pidKpNe (38 38)
 pidKiNe (31.6 31.6)
